<resources>
    <string name="app_name">PhonBuk</string>
    <string name="edit_category_title">Edit Category</string>
    <string name="new_category_title">New Category</string>
    <string name="category_name">Category Name</string>
    <string name="category_color">Category Color</string>
    <string name="save_category">Save Category</string>
    <string name="new_contact_title">New Contact</string>
    <string name="edit_contact_title">Edit Contact</string>
    <string name="contact_name">Name</string>
    <string name="telephone">Telephone</string>
    <string name="email">E-mail</string>
    <string name="address">Address</string>
    <string name="birth_date">Birth date</string>

    <string name="all">ALL</string>
    <string name="coleagues">COLEAGUES</string>
    <string name="family">FAMILY</string>
    <string name="favorites">FAVORITES</string>
    <string name="common">COMMON</string>
    <string name="emergency">EMERGENCY</string>
    <string name="vip">V.I.P.</string>
    <string name="friends">FRIENDS</string>

    <string-array name="items_test">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
    </string-array>
    <string name="contacts">Contacts</string>

    <string name="category_options">Category Options</string>
    <string name="edit_category">Edit Category</string>
    <string name="remove_category">Remove Category</string>
    <string name="contact_options">Contact Options</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="choose_category">Choose a category for the contact</string>
    <string name="remove_contact">Remove Contact from Category</string>
    <string name="remove_contact_good">Remove Contact for Good</string>
    <string name="context_menu_cancel">Cancel</string>
    <string name="remove_category_alert">Are you sure you want to remove the category </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cant_delete_category">Cannot delete/edit this category because its protected by the system. Try another category.</string>
    <string name="delete_category_success_title">Farwell category! </string>
    <string name="delete_category_success_msg">Category deleted successfully.</string>
    <string name="delete_category_fail_title">Sorry!</string>
    <string name="delete_category_fail_msg">Something gone wrong! Category deletion failed.</string>
    <string name="ok">OK</string>
    <string name="add_contact_button_label">ADD A CONTACT</string>
    <string name="get_a_photo">Get a Picture</string>
    <string name="cant_get_image">Sorry, we couldn\'t get the image.</string>
    <string name="save_contact_btn">SAVE CONTACT</string>
    <string name="address_example">1640 Riverside Drive</string>
    <string name="birthdate_example">Auguts 6, 1920</string>
    <string name="title_activity_contact_details">Details</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="actions">Actions</string>
</resources>
