<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditCategory"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:background="@color/app_bg"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="15dp"
            android:tint="@color/yellow"
            android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"
            android:onClick="onBackButtonClicked"
            />

        <TextView
            android:id="@+id/edit_contact_ac"
            android:text="@string/new_contact_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/yellow"

            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="15dp"
            android:tint="@color/yellow"
            android:src="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
            />
    </LinearLayout>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#22ffffff"
                android:paddingLeft="15dp"
                >
                <EditText
                    android:id="@+id/contact_name"
                    android:hint="@string/contact_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/yellow"
                    android:textSize="30sp"
                    android:paddingTop="30dp"
                    />
                <ImageView
                    android:id="@+id/contact_photo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/contact_photo"
                    android:onClick="onContactPhotoClicked"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:paddingTop="15dp"
                android:paddingLeft="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/yellow"
                android:text="@string/telephone"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#22ffffff">
                <include layout="@layout/item_edit_contact_telephone_list"/>
            </LinearLayout>

            <!--<ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@android:drawable/ic_input_add"
                android:background="#11ffffff"
                android:tint="@color/yellow"
                android:onClick="onAddPhoneNumberClicked"
                />-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:paddingTop="15dp"
                android:paddingLeft="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/yellow"
                android:text="@string/email"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#22ffffff">
                <include layout="@layout/item_edit_contact_email_list"/>
            </LinearLayout>

            <!--<ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@android:drawable/ic_input_add"
                android:background="#11ffffff"
                android:tint="@color/yellow"
                android:onClick="onAddPhoneNumberClicked"
                />-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:paddingTop="15dp"
                android:paddingLeft="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/yellow"
                android:text="@string/address"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:background="#22ffffff"
                >
                <EditText
                    android:id="@+id/address_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:ems="10"
                    android:textSize="30sp"
                    android:textColor="@color/yellow"
                    android:hint="@string/address_example"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:paddingTop="15dp"
                android:paddingLeft="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/yellow"
                android:text="@string/birth_date"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:background="#22ffffff"
                >
                <EditText
                    android:id="@+id/birth_date_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date|time"
                    android:ems="10"
                    android:textSize="30sp"
                    android:textColor="@color/yellow"
                    android:hint="@string/birthdate_example"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/sv_contact_btn"
                android:textColor="@color/yellow"
                android:textSize="18sp"
                android:background="#44ffffff"
                android:text="@string/save_contact_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:onClick="onSaveButtonClicked"
                />
        </LinearLayout>
    </ScrollView>



</LinearLayout>
